--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -187,3 +187,5 @@
 {% if page.tikzjax %}
   <link defer rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
 {% endif %}
+
+<meta name="google-site-verification" content="oIXNKhMwkoFU1OBu5Ac50cYLls8Mw443yW4OjNWBbDA" />
